fix: canonicalize alert channel entries